--- a/src/pages/Shop/Product.css
+++ b/src/pages/Shop/Product.css
@@ -7,4 +7,23 @@
   .addToCartButton {
     @apply text-sm cursor-pointer border border-black rounded-2xl text-black bg-white py-1 px-4 hover:bg-black hover:text-[#e5d5f7];
   }
+
+  .input {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5rem;
+  }
+
+  .input label {
+    font-weight: bold;
+    margin-right: 1rem;
+  }
+
+  .input input {
+    width: 3rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font: inherit;
+    padding-left: 0.5rem;
+  }
 }
